# lcaonet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  requirements_cpu.txt  requirements_docker.txt  setup.cfg  setup.py
.github/workflows/: black.yaml  ci  ci.yaml  testing.yaml
conda/: build_conda.sh  meta.yaml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  lr_monitor.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml
configs/datamodule/: graphdatamodule.yaml  graphdatamodule_split.yaml
configs/experiment/: default.yaml  dimpp.yaml  dimpp_hyper.yaml  ex_schnet.yaml  example_schnet.yaml  schnet.yaml
configs/hparams_search/: dimenetpp_optuna.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/loss_fn/: mse.yaml  rmse.yaml
configs/metrics/: mae.yaml  mse.yaml  rmse.yaml
configs/model/: dimenetpp.yaml  schnet.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/plmodule/: gnn_module.yaml
configs/scheduler/: cosine_annealing.yaml  reduce_rl_on_plateau.yaml  warmupcosinedecay_annealing.yaml
configs/trainer/: default.yaml
docker/: Dockerfile  Dockerfile.base  README.md  docker-compose.yml
lcaonet/: __init__.py
lcaonet/atomistic/: __init__.py  elec.py  exponent.py  info.py  three_body_elec.py
lcaonet/data/: __init__.py  convert.py  datakeys.py  dataset.py  keys.py  utils.py
lcaonet/elec/: __init__.py  table.py  threebody.py
lcaonet/model/: __init__.py  base.py  lcaonet.py  lcaonet_sph.py
lcaonet/nn/: __init__.py  activation.py  base.py  cutoff.py  embed.py  post.py  rbf.py  shbf.py
lcaonet/train/: __init__.py  scheduler.py
lcaonet/utils/: __init__.py  (+2 more)
notebooks/: example.hdf5
pyg_material/: __init__.py
scripts/: pyggnns_train
(+153 files in other folders)
