[metadata]
name = pyggnn
version = attr: pyggnn.__version__.__version__
author = Kento Nishio and nmdl members
author_email = knishio@iis.u-tokyo.ac.jp
description = PyGGNN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nmdl-mizo/pyggnn
license = MIT

[options]
zip_safe = False
python_requires = >=3.6
package_dir=
    =src
packages=find:
# scripts =
    # src/scripts/
install_requires =
    numpy
    sympy
    h5py
    ase
    torch>=1.7
    torch-geometric

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    sacred
    pytest-console-scripts
    pytest-datadir
