[metadata]
name = pyggnns
version = attr: pyggnn.__version__.__version__
author = Kento Nishio
author_email = knishio@iis.u-tokyo.ac.jp
description = PyGGNNs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nmdl-mizo/pyggnn
license = MIT

[options]
zip_safe = False
python_requires = >=3.6
package_dir=
    =src
packages=find:
scripts =
    src/scripts/train.py
install_requires =
    numpy
    sympy
    h5py
    ase
    torch>=1.7
    torch-geometric

[options.packages.find]
where=src
