[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
zip_safe = False
scripts =
    # scripts/pyggnns_train

[aliases]
test=pytest

[tool:pytest]
addopts=--capture=no
filterwarnings=ignore::DeprecationWarning:tensorboard.*

[flake8]
ignore=F811,W503,W504  # ignore overload redefinition, allow line breaks before/after binary operators

[isort]
multi_line_output=3
include_trailing_comma=True
skip=.gitignore,__init__.py
